# base64.hpp

./: CMakeLists.txt  README.md  base64.md  rfc4648.txt
.github/workflows/: cmake-multi-platform.yml  msys2.yml
include/: base64.hpp
include/base64/: base64.hpp
tests/: CMakeLists.txt  unittests.cc
